--- a/package.json
+++ b/package.json
@@ -19,12 +19,15 @@
     "@angular/platform-browser": "~10.0.0",
     "@angular/platform-browser-dynamic": "~10.0.0",
     "@angular/router": "~10.0.0",
+    "@auth0/angular-jwt": "^5.0.2",
     "@ionic-native/core": "^5.0.0",
     "@ionic-native/geolocation": "^5.29.0",
     "@ionic-native/onesignal": "^5.29.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.0",
+    "@ionic/storage": "^2.3.1",
+    "axios": "^0.21.1",
     "cordova-android": "9.0.0",
     "ion2-calendar": "^3.0.0-rc.0",
     "moment": "^2.29.1",
