--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "@ionic-native/geolocation": "^5.29.0",
     "@ionic-native/network": "^5.31.1",
     "@ionic-native/onesignal": "^5.29.0",
+    "@ionic-native/paypal": "^5.31.1",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
+    "@ionic-native/stripe": "^5.31.1",
     "@ionic/angular": "^5.0.0",
     "@ionic/storage": "^2.3.1",
     "axios": "^0.21.1",
@@ -35,6 +37,7 @@
     "moment": "^2.29.1",
     "ng-chartjs": "^0.2.1",
     "rxjs": "~6.5.5",
+    "stripe": "^8.142.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
   },
@@ -48,7 +51,9 @@
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
+    "card.io.cordova.mobilesdk": "^2.1.0",
     "codelyzer": "^6.0.0",
+    "com.paypal.cordova.mobilesdk": "^3.5.0",
     "cordova-android": "^9.0.0",
     "cordova-plugin-advanced-http": "^3.1.0",
     "cordova-plugin-device": "^2.0.2",
@@ -59,6 +64,7 @@
     "cordova-plugin-network-information": "^2.0.2",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
+    "cordova-plugin-stripe": "^1.5.3",
     "cordova-plugin-whitelist": "^1.3.3",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
@@ -86,7 +92,9 @@
       "cordova-plugin-ionic-keyboard": {},
       "cordova-plugin-geolocation": {},
       "cordova-plugin-network-information": {},
-      "cordova-plugin-advanced-http": {}
+      "cordova-plugin-advanced-http": {},
+      "com.paypal.cordova.mobilesdk": {},
+      "cordova-plugin-stripe": {}
     },
     "platforms": [
       "browser",
