--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~11.2.6",
     "@angular/router": "~11.2.6",
     "@auth0/angular-jwt": "^5.0.2",
+    "@ionic-native/camera": "^5.32.1",
     "@ionic-native/core": "^5.0.0",
     "@ionic-native/geolocation": "^5.29.0",
     "@ionic-native/network": "^5.31.1",
@@ -57,6 +58,7 @@
     "com.paypal.cordova.mobilesdk": "^3.5.0",
     "cordova-android": "^9.0.0",
     "cordova-plugin-advanced-http": "^3.1.0",
+    "cordova-plugin-camera": "^5.0.1",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-file": "^6.0.2",
     "cordova-plugin-geolocation": "^4.0.2",
@@ -97,7 +99,10 @@
       "cordova-plugin-network-information": {},
       "cordova-plugin-advanced-http": {},
       "com.paypal.cordova.mobilesdk": {},
-      "cordova-plugin-stripe": {}
+      "cordova-plugin-stripe": {},
+      "cordova-plugin-camera": {
+        "ANDROID_SUPPORT_V4_VERSION": "27.+"
+      }
     },
     "platforms": [
       "browser",
